--- a/index.html
+++ b/index.html
@@ -58,12 +58,14 @@
         <section class="container">
             <div class="row justify-content-center text-center box g-4">
                 <div class="col-12 col-xl-6 about align-self-start m-3">
+                    <h3><i class="fa-solid fa-code"></i></h3>
                     <p>PMC (Precision Management for Construction) is a platform built to streamline every aspect of
                         subcontractor workflows. From tracking site progress to managing tools, materials, and
                         compliance
                     </p>
                 </div>
                 <div class="col-12 col-xl-6 about align-self-end m-3">
+                    <h3><i class="fa-solid fa-code"></i></h3>
                     <p>PMC brings clarity, control, and precision to your projects—helping small to mid-sized firms stay
                         efficient, accountable, and on budget.</p>
                 </div>
