register html results moved to images

--- a/register.html
+++ b/register.html
@@ -65,9 +65,9 @@
                             <div class="col-12 mb-3">
                                 <label for="event-type" class="form-label">Software</label>
                                 <select id="event-type" class="form-select" name="event-type" required>
-                                    <option value="none" selected></option>
+                                    <option value="" selected disabled>Choose software…</option> 
                                     <option value="essentials">Essentials</option>
-                                    <option value="Premium">Premium</option>
+                                    <option value="premium">Premium</option>
                                 </select>
                             </div>
                         </div>
@@ -106,7 +106,8 @@
                             class="fa-brands fa-twitter fa-2x"></i></a>
                     <a href="https://www.linkedin.com" target="_blank" rel="noopener" class="me-3"><i
                             class="fa-brands fa-linkedin fa-2x"></i></a>
-                    <a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fa-brands fa-instagram fa-2x"></i></a>
+                    <a href="https://www.instagram.com" target="_blank" rel="noopener"><i
+                            class="fa-brands fa-instagram fa-2x"></i></a>
                 </div>
             </div>
         </div>
@@ -118,4 +119,5 @@
     <!-- Font awesome kit -->
     <script src="https://kit.fontawesome.com/6b3b37dcca.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
