--- a/software.html
+++ b/software.html
@@ -153,9 +153,7 @@
         </section>
         <section class="container">
             <div class="row justify-content-center">
-                <div id="register" class="col-12 text-center mt-4">To get set up with the complete your regsitration and
-                    the team
-                    will be in touch</div>
+                <div id="register" class="col-12 text-center mt-4">To learn more about the software, register your interest and the team will get in touch with you!</div>
                 <div class="col-12 text-center mb-4 mt-4 cta-button">
                     <a class="btn btn-register" href="register.html" role="button">Register</a>
                 </div>
@@ -205,4 +203,5 @@
     <!-- Font awesome kit -->
     <script src="https://kit.fontawesome.com/6b3b37dcca.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
