--- a/software.html
+++ b/software.html
@@ -53,9 +53,9 @@
         <section class="container">
             <div class="row base">
                 <div class="col-12">
-                    <h3 class="mt-4 mb-4">Essentials</h3>
+                    <h3 class="mt-4">Essentials</h3>
                 </div>
-                <div class="col-md-4 mb-3 mt-3">
+                <div class="col-md-4 mb-3 mt-2">
                     <div class="card h-100 base-card">
                         <div class="card-body">
                             <h5 class="card-title">Site Management</h5>
@@ -98,10 +98,10 @@
         <section class="container">
             <div class="row pro">
                 <div class="col-12">
-                    <h3 class="mt-4 mb-1">Premium</h3>
+                    <h3 class="mt-4">Premium</h3>
                     <p>Includes everything in essentials version</p>
                 </div>
-                <div class="col-md-3 mb-3 mt-3">
+                <div class="col-md-3 mb-3 mt-1">
                     <div class="card h-100 base-card">
                         <div class="card-body">
                             <h5 class="card-title">Material Management</h5>
@@ -142,7 +142,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Equipment Hire</h5>
                             <ul>
-                                <li>Equipment hire</li>
+                                <li>Location</li>
                                 <li>Equipment type</li>
                                 <li>Equipment invoices</li>
                             </ul>
