wireframes added to readme

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </div>
 
                 <!--Social Media Links-->
-                <div id="media-links" class="col-12 col-xl-4 text-center social-links">
+                <div id="media-links" class="col-12 col-xl-4 text-center">
                     <a href="https://www.facebook.com" target="_blank" rel="noopener" class="me-3"><i
                             class="fa-brands fa-facebook fa-2x"></i></a>
                     <a href="https://www.x.com" target="_blank" rel="noopener" class="me-3"><i
