alternative text added fo rthe visually impaired (aria labels)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Navbar -->
     <nav id="navbar" class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
         <div class="container"> <!-- Changed to container for better alignment -->
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="index.html" aria-label="Homepage">
                 <i class="fa-solid fa-person-digging"></i>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -72,10 +72,12 @@
         <section class="container mt-4 mb-4">
             <div class="row">
                 <div class="col-12 col-md-6 justify-content-center text-center cta-button">
-                    <a class="btn btn-register" href="software.html" role="button">Precsion Software</a>
+                    <a class="btn btn-register" href="software.html" role="button"
+                        aria-label="Learn more about Precision Software">Precsion Software</a>
                 </div>
                 <div class="col-12 col-md-6 justify-content-center text-center cta-button">
-                    <a class="btn btn-register" href="register.html" role="button">Register</a>
+                    <a class="btn btn-register" href="register.html" role="button" aria-label="Register for PMC">Register
+                        </a>
                 </div>
             </div>
         </section>
@@ -90,7 +92,7 @@
                 </div>
                 <!--Company Logo-->
                 <div class="col-12 col-xl-4 text-center"><img src="assets/images/company-logo.png" alt="Company Logo"
-                        class="img-fluid" style="max-width: 100%; max-height: 100px; height: auto;">
+                        aria-label="Company Logo" class="img-fluid" style="max-width: 100%; max-height: 100px; height: auto;">
                 </div>
                 <!--Contact Info-->
                 <div class="col-12 col-xl-4 text-center">
@@ -105,14 +107,18 @@
 
                 <!--Social Media Links-->
                 <div id="media-links" class="col-12 col-xl-4 text-center">
-                    <a href="https://www.facebook.com" target="_blank" rel="noopener" class="me-3"><i
-                            class="fa-brands fa-facebook fa-2x"></i></a>
-                    <a href="https://www.x.com" target="_blank" rel="noopener" class="me-3"><i
-                            class="fa-brands fa-twitter fa-2x"></i></a>
-                    <a href="https://www.linkedin.com" target="_blank" rel="noopener" class="me-3"><i
-                            class="fa-brands fa-linkedin fa-2x"></i></a>
-                    <a href="https://www.instagram.com" target="_blank" rel="noopener"><i
-                            class="fa-brands fa-instagram fa-2x"></i></a>
+                    <a href="https://www.facebook.com" target="_blank" rel="noopener" class="me-3" aria-label="Facebook">
+                        <i class="fa-brands fa-facebook fa-2x"></i>
+                    </a>
+                    <a href="https://www.x.com" target="_blank" rel="noopener" class="me-3" aria-label="Twitter">
+                        <i class="fa-brands fa-twitter fa-2x"></i>
+                    </a>
+                    <a href="https://www.linkedin.com" target="_blank" rel="noopener" class="me-3" aria-label="LinkedIn">
+                        <i class="fa-brands fa-linkedin fa-2x"></i>
+                    </a>
+                    <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Instagram">
+                        <i class="fa-brands fa-instagram fa-2x"></i>
+                    </a>
                 </div>
             </div>
         </div>
