--- a/software.html
+++ b/software.html
@@ -18,7 +18,8 @@
     <!-- Navbar -->
     <nav id="navbar" class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
         <div class="container"> <!-- Changed to container for better alignment -->
-            <a class="navbar-brand" href="index.html">
+            <!-- Navbar brand icon -->
+            <a class="navbar-brand" href="index.html" aria-label="Homepage">
                 <i class="fa-solid fa-person-digging"></i>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -155,7 +156,8 @@
             <div class="row justify-content-center">
                 <div id="register" class="col-12 text-center mt-4">To learn more about the software, register your interest and the team will get in touch with you!</div>
                 <div class="col-12 text-center mb-4 mt-4 cta-button">
-                    <a class="btn btn-register" href="register.html" role="button">Register</a>
+                    <!-- Register call-to-action button -->
+                    <a class="btn btn-register" href="register.html" role="button" aria-label="Register your interest in Precision Software">Register</a>
                 </div>
             </div>
         </section>
@@ -169,7 +171,9 @@
                     <h3 class="display-6">Reach out to our precise team!</h3>
                 </div>
                 <!--Company Logo-->
-                <div class="col-12 col-xl-4 text-center"><img src="assets/images/company-logo.png" alt="Company Logo"
+                <div class="col-12 col-xl-4 text-center">
+                    <!-- Company logo in footer -->
+                    <img src="assets/images/company-logo.png" alt="Company Logo" aria-label="Company Logo"
                         class="img-fluid" style="max-width: 100%; max-height: 100px; height: auto;">
                 </div>
                 <!--Contact Info-->
@@ -184,14 +188,19 @@
                 </div>
                 <!--Social Media Links-->
                 <div id="media-links" class="col-12 col-xl-4 text-center social-links">
-                    <a href="https://www.facebook.com" target="_blank" rel="noopener" class="me-3"><i
-                            class="fa-brands fa-facebook fa-2x"></i></a>
-                    <a href="https://www.x.com" target="_blank" rel="noopener" class="me-3"><i
-                            class="fa-brands fa-twitter fa-2x"></i></a>
-                    <a href="https://www.linkedin.com" target="_blank" rel="noopener" class="me-3"><i
-                            class="fa-brands fa-linkedin fa-2x"></i></a>
-                    <a href="https://www.instagram.com" target="_blank" rel="noopener"><i
-                            class="fa-brands fa-instagram fa-2x"></i></a>
+                    <!-- Social media links in footer -->
+                    <a href="https://www.facebook.com" target="_blank" rel="noopener" class="me-3" aria-label="Facebook">
+                        <i class="fa-brands fa-facebook fa-2x"></i>
+                    </a>
+                    <a href="https://www.x.com" target="_blank" rel="noopener" class="me-3" aria-label="Twitter">
+                        <i class="fa-brands fa-twitter fa-2x"></i>
+                    </a>
+                    <a href="https://www.linkedin.com" target="_blank" rel="noopener" class="me-3" aria-label="LinkedIn">
+                        <i class="fa-brands fa-linkedin fa-2x"></i>
+                    </a>
+                    <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Instagram">
+                        <i class="fa-brands fa-instagram fa-2x"></i>
+                    </a>
                 </div>
             </div>
         </div>
