--- a/register.html
+++ b/register.html
@@ -18,7 +18,8 @@
     <!-- Navbar -->
     <nav id="navbar" class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
+            <!-- Navbar brand icon -->
+            <a class="navbar-brand" href="index.html" aria-label="Homepage">
                 <i class="fa-solid fa-person-digging"></i>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -71,7 +72,8 @@
                                 </select>
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-register">Submit</button>
+                        <!-- Submit button -->
+                        <button type="submit" class="btn btn-register" aria-label="Submit registration form">Submit</button>
                     </form>
                 </div>
             </div>
@@ -85,7 +87,9 @@
                     <h3 class="display-6">Reach out to our precise team!</h3>
                 </div>
                 <!--Company Logo-->
-                <div class="col-12 col-xl-4 text-center"><img src="assets/images/company-logo.png" alt="Company Logo"
+                <div class="col-12 col-xl-4 text-center">
+                    <!-- Company logo -->
+                    <img src="assets/images/company-logo.png" alt="Company Logo" aria-label="Company Logo"
                         class="img-fluid" style="max-width: 100%; max-height: 100px; height: auto;">
                 </div>
                 <!--Contact Info-->
@@ -100,14 +104,19 @@
                 </div>
                 <!--Social Media Links-->
                 <div id="media-links" class="col-12 col-xl-4 text-center social-links">
-                    <a href="https://www.facebook.com" target="_blank" rel="noopener" class="me-3"><i
-                            class="fa-brands fa-facebook fa-2x"></i></a>
-                    <a href="https://www.x.com" target="_blank" rel="noopener" class="me-3"><i
-                            class="fa-brands fa-twitter fa-2x"></i></a>
-                    <a href="https://www.linkedin.com" target="_blank" rel="noopener" class="me-3"><i
-                            class="fa-brands fa-linkedin fa-2x"></i></a>
-                    <a href="https://www.instagram.com" target="_blank" rel="noopener"><i
-                            class="fa-brands fa-instagram fa-2x"></i></a>
+                    <!-- Social media links -->
+                    <a href="https://www.facebook.com" target="_blank" rel="noopener" class="me-3" aria-label="Facebook">
+                        <i class="fa-brands fa-facebook fa-2x"></i>
+                    </a>
+                    <a href="https://www.x.com" target="_blank" rel="noopener" class="me-3" aria-label="Twitter">
+                        <i class="fa-brands fa-twitter fa-2x"></i>
+                    </a>
+                    <a href="https://www.linkedin.com" target="_blank" rel="noopener" class="me-3" aria-label="LinkedIn">
+                        <i class="fa-brands fa-linkedin fa-2x"></i>
+                    </a>
+                    <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Instagram">
+                        <i class="fa-brands fa-instagram fa-2x"></i>
+                    </a>
                 </div>
             </div>
         </div>
