--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
                         aria-label="Learn more about Precision Software">Precsion Software</a>
                 </div>
                 <div class="col-12 col-md-6 justify-content-center text-center cta-button">
-                    <a class="btn btn-register" href="register.html" role="button" aria-label="Register for PMC">Register
-                        </a>
+                    <a class="btn btn-register" href="register.html" role="button"
+                        aria-label="Register for PMC">Register
+                    </a>
                 </div>
             </div>
         </section>
@@ -87,33 +88,35 @@
     <footer class="mt-auto"> <!-- mt auto pushes footer to bottom -->
         <div class="container section">
             <div class="row justify-content-center">
-                <div class="col-12 text-center mb-3">
-                    <h3 class="display-6">Reach out to our precise team!</h3>
-                </div>
-                <!--Company Logo-->
-                <div class="col-12 col-xl-4 text-center"><img src="assets/images/company-logo.png" alt="Company Logo"
-                        aria-label="Company Logo" class="img-fluid" style="max-width: 100%; max-height: 100px; height: auto;">
-                </div>
-                <!--Contact Info-->
-                <div class="col-12 col-xl-4 text-center">
-                    <address>
-                        Projects Managed with Code<br>
-                        123 Construction Lane<br>
-                        Buildtown, BT1 2CD<br>
-                        Phone: (123) 456-7890<br>
-                        Email: info@pmc.org
-                    </address>
-                </div>
-
+                <div class="footer-design">
+                    <div class="col-12 text-center mb-3">
+                        <h3 class="display-6">Reach out to our precise team!</h3>
+                    <!--Company Logo-->
+                    <div class="col-12 col-xl-4 text-center"><img src="assets/images/company-logo.png"
+                            alt="Company Logo" aria-label="Company Logo" class="img-fluid"
+                            style="max-width: 100%; max-height: 100px; height: auto;">
+                    </div>
+                    <!--Contact Info-->
+                    <div class="col-12 col-xl-4 text-center">
+                        <address>
+                            Projects Managed with Code<br>
+                            123 Construction Lane<br>
+                            Buildtown, BT1 2CD<br>
+                            Phone: (123) 456-7890<br>
+                            Email: info@pmc.org
+                        </address>
+                    </div> 
                 <!--Social Media Links-->
                 <div id="media-links" class="col-12 col-xl-4 text-center">
-                    <a href="https://www.facebook.com" target="_blank" rel="noopener" class="me-3" aria-label="Facebook">
+                    <a href="https://www.facebook.com" target="_blank" rel="noopener" class="me-3"
+                        aria-label="Facebook">
                         <i class="fa-brands fa-facebook fa-2x"></i>
                     </a>
                     <a href="https://www.x.com" target="_blank" rel="noopener" class="me-3" aria-label="Twitter">
                         <i class="fa-brands fa-twitter fa-2x"></i>
                     </a>
-                    <a href="https://www.linkedin.com" target="_blank" rel="noopener" class="me-3" aria-label="LinkedIn">
+                    <a href="https://www.linkedin.com" target="_blank" rel="noopener" class="me-3"
+                        aria-label="LinkedIn">
                         <i class="fa-brands fa-linkedin fa-2x"></i>
                     </a>
                     <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Instagram">
