--- a/index.html
+++ b/index.html
@@ -88,10 +88,9 @@
     <footer class="mt-auto"> <!-- mt auto pushes footer to bottom -->
         <div class="container section">
             <div class="row justify-content-center">
-                <div class="footer-design">
                     <div class="col-12 text-center mb-3">
                         <h3 class="display-6">Reach out to our precise team!</h3>
-                    <!--Company Logo-->
+                    </div><!--Company Logo-->
                     <div class="col-12 col-xl-4 text-center"><img src="assets/images/company-logo.png"
                             alt="Company Logo" aria-label="Company Logo" class="img-fluid"
                             style="max-width: 100%; max-height: 100px; height: auto;">
